--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: ergodash_left
+    shield: ergoddox_left
   - board: nice_nano_v2
-    shield: ergodash_right
+    shield: ergoddox_right
