--- a/config/boards/shields/ergoddox/ergoddox.dtsi
+++ b/config/boards/shields/ergoddox/ergoddox.dtsi
@@ -66,6 +66,7 @@
     };
 
     chosen {
-        zmk,physical-layout = &physical_layout0;
+        zmk,kscan = &kscan0;
+        zmk,matrix-transform = &default_transform;
     };
 };
