--- a/config/boards/shields/ergoddox/ergoddox.zmk.yml
+++ b/config/boards/shields/ergoddox/ergoddox.zmk.yml
@@ -3,7 +3,7 @@ id: ergoddox
 name: ErgoDDOX
 type: shield
 url: https://github.com/DidItWork/ergoddox/
-requires: [nice_nano_v2]
+requires: [pro_micro]
 features:
   - keys
 siblings:
