reformat zmk.yml

--- a/config/boards/shields/ergoddox/ergoddox.zmk.yml
+++ b/config/boards/shields/ergoddox/ergoddox.zmk.yml
@@ -3,7 +3,8 @@ id: ergoddox
 name: ErgoDDOX
 type: shield
 url: https://github.com/DidItWork/ergoddox/
-requires: [pro_micro]
+requires:
+  - pro_micro
 features:
   - keys
 siblings:
