--- a/build.yaml
+++ b/build.yaml
@@ -19,9 +19,9 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: ergoddox_left
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: ergoddox_right
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: settings_reset
