--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,9 @@
 include:
   - board: nice_nano_v2
     shield: ergoddox_left
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: ergoddox_right
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: settings_reset
