--- a/build.yaml
+++ b/build.yaml
@@ -19,11 +19,11 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: promicro_nrf52840
     shield: ergoddox_left
     snippet: zmk-usb-logging
-  - board: nice_nano_v2
+  - board: promicro_nrf52840
     shield: ergoddox_right
     snippet: zmk-usb-logging
-  - board: nice_nano_v2
+  - board: promicro_nrf52840
     shield: settings_reset
