Add underglow to hardware specifications

--- a/config/boards/shields/ergoddox/ergoddox.zmk.yml
+++ b/config/boards/shields/ergoddox/ergoddox.zmk.yml
@@ -6,6 +6,7 @@ url: https://github.com/DidItWork/ergoddox/
 requires: [pro_micro]
 features:
   - keys
+  - underglow
 siblings:
   - ergoddox_left
   - ergoddox_right
