--- a/config/boards/shields/ergoddox/ergoddox.dtsi
+++ b/config/boards/shields/ergoddox/ergoddox.dtsi
@@ -52,4 +52,26 @@
         kscan = <&kscan0>;
         transform = <&default_transform>;
     };
+
+    left_encoder: encoder_left {
+        comptaible = "alps,ec11";
+        a-gpios = <&gpio1 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&gpio1 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        steps = <20>;
+        status = "disabled";
+    }
+
+    right_encoder: encoder_right {
+        comptaible = "alps,ec11";
+        a-gpios = <&gpio1 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&gpio1 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        steps = <20>;
+        status = "disabled";
+    }
+
+    sensors: sensors {
+        compatible = "zmk,keymap-sensors";
+        sensors = <&left_encoder &right_encoder>;
+        triggers-per-rotation = <20>;
+    };
 };
