--- a/config/ergoddox.conf
+++ b/config/ergoddox.conf
@@ -1,3 +1,5 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
