--- a/config/boards/shields/ergoddox/ergoddox.dtsi
+++ b/config/boards/shields/ergoddox/ergoddox.dtsi
@@ -54,7 +54,7 @@
     };
 
     left_encoder: encoder_left {
-        comptaible = "alps,ec11";
+        compatible = "alps,ec11";
         a-gpios = <&gpio1 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         a-gpios = <&gpio1 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <20>;
@@ -62,7 +62,7 @@
     };
 
     right_encoder: encoder_right {
-        comptaible = "alps,ec11";
+        compatible = "alps,ec11";
         a-gpios = <&gpio1 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         a-gpios = <&gpio1 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <20>;
